# vertx-kafka

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  maven.bzl  version.bzl
src/main/java/com/trl/vertex_kafka/: Main.java  MainVerticle.java
src/main/java/com/trl/vertex_kafka/config/: KafkaConfig.java
src/main/java/com/trl/vertex_kafka/constants/: Constants.java
src/test/java/com/trl/vertex_kafka/: TestMainVerticle.java
